--- a/apps/vm-api/project.json
+++ b/apps/vm-api/project.json
@@ -16,9 +16,6 @@
         "outputPath": "dist/apps/vm-api",
         "main": "apps/vm-api/src/main.ts",
         "tsConfig": "apps/vm-api/tsconfig.app.json",
-        "assets": [
-          "apps/vm-api/src/assets"
-        ],
         "isolatedConfig": true,
         "webpackConfig": "apps/vm-api/webpack.config.js"
       },
@@ -40,34 +37,18 @@
         "production": {
           "buildTarget": "vm-api:build:production"
         }
-      }
+      },
+      "dependsOn": ["docker-compose"]
     },
     "lint": {
       "executor": "@nx/linter:eslint",
-      "outputs": [
-        "{options.outputFile}"
-      ],
+      "outputs": ["{options.outputFile}"],
       "options": {
-        "lintFilePatterns": [
-          "apps/vm-api/**/*.ts"
-        ]
+        "lintFilePatterns": ["apps/vm-api/**/*.ts"]
       }
     },
-    "test": {
-      "executor": "@nx/jest:jest",
-      "outputs": [
-        "{workspaceRoot}/coverage/{projectRoot}"
-      ],
-      "options": {
-        "jestConfig": "apps/vm-api/jest.config.ts",
-        "passWithNoTests": true
-      },
-      "configurations": {
-        "ci": {
-          "ci": true,
-          "codeCoverage": true
-        }
-      }
+    "docker-compose": {
+      "command": "docker-compose -f apps/vm-api/docker-compose.yml up -d"
     }
   },
   "tags": []
