--- a/package.json
+++ b/package.json
@@ -2,41 +2,67 @@
   "name": "@vm-workspace/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "start": "npx concurrently \"npx nx serve vm-api\" \"npx nx serve vm-app\""
+  },
   "private": true,
   "dependencies": {
     "@nestjs/common": "^9.1.1",
+    "@nestjs/config": "^2.3.3",
     "@nestjs/core": "^9.1.1",
+    "@nestjs/jwt": "^10.0.3",
+    "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^9.1.1",
+    "@nestjs/swagger": "^6.3.0",
+    "@nestjs/typeorm": "^9.0.1",
+    "@vaadin/router": "^1.7.5",
     "axios": "^1.0.0",
+    "bcrypt": "^5.1.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
+    "lit": "^2.7.5",
+    "nestjs-cls": "^3.4.0",
+    "pg": "^8.11.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "typeorm": "^0.3.16"
   },
   "devDependencies": {
     "@nestjs/schematics": "^9.1.0",
     "@nestjs/testing": "^9.1.1",
     "@nx/eslint-plugin": "16.3.2",
-    "@nx/jest": "16.3.2",
     "@nx/js": "16.3.2",
     "@nx/linter": "16.3.2",
     "@nx/nest": "16.3.2",
     "@nx/node": "16.3.2",
+    "@nx/react": "^16.3.2",
+    "@nx/vite": "16.3.2",
+    "@nx/web": "^16.3.2",
     "@nx/webpack": "16.3.2",
     "@nx/workspace": "16.3.2",
-    "@types/jest": "^29.4.0",
+    "@open-wc/eslint-config": "^11.0.0",
+    "@swc/core": "~1.3.51",
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/typography": "^0.5.9",
     "@types/node": "~18.7.1",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
+    "@vitest/ui": "^0.31.0",
+    "autoprefixer": "^10.4.14",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
-    "jest": "^29.4.1",
-    "jest-environment-node": "^29.4.1",
     "nx": "16.3.2",
     "nx-cloud": "latest",
+    "postcss": "^8.4.24",
     "prettier": "^2.6.2",
-    "ts-jest": "^29.1.0",
+    "swc-loader": "0.1.15",
+    "tailwindcss": "^3.3.2",
     "ts-node": "10.9.1",
-    "typescript": "~5.0.2"
+    "typescript": "~5.0.2",
+    "vite": "^4.3.4",
+    "vite-plugin-eslint": "^1.8.1",
+    "vite-plugin-node": "^3.0.2",
+    "vite-tsconfig-paths": "^4.0.2"
   }
 }
