build(docker): updated the path for the volume directory of docker

--- a/apps/vm-api/docker-compose.yml
+++ b/apps/vm-api/docker-compose.yml
@@ -7,6 +7,6 @@ services:
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: vm
     volumes:
-      - /data/pg:/var/lib/postgresql/data
+      - ~/ozee-vm-app-data/pg:/var/lib/postgresql/data
     ports:
       - 5432:5432
